# async-uci

./: .gitignore  Cargo.toml  LICENSE  NOTES.md  README.md  STEPS.md  TODO.md  UCI.md
res/test/: fakefish.sh
src/: cli.rs  engine.rs  main.rs  parse.rs
