[package]
name = "async-uci"
description = "An async UCI Implementation over the tokio runtime."
version = "0.1.1"
edition = "2021"
homepage = "https://github.com/manuelpepe/rust-practice-chess"
repository = "https://github.com/manuelpepe/rust-practice-chess"
readme = "README.md"
license-file = "LICENSE"
exclude = [
    "target/**",
    "res/**",
    ".env*"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
clap = { version = "4.3.0", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
